<resources>
    <string name="app_name">Instagram</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="change_photo_btn">Change Photo</string>
    <string name="name_label">Name</string>
    <string name="username_label">Username</string>
    <string name="website_label">Website</string>
    <string name="bio_label">Bio</string>
    <string name="private_information">Private Information</string>
    <string name="email_label">E-mail Address</string>
    <string name="name_input_hint">Name</string>
    <string name="username_input_hint">Username</string>
    <string name="website_input_hint">Website</string>
    <string name="bio_input_hint">Bio</string>
    <string name="e_mail_address_input_hint">E-mail Address</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="phone_number_input_hint">Phone Number</string>
    <string name="gender_label">Gender</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Don\'t have an account? <b>Sign up.</b></string>
    <string name="instagram_label">instagram_label</string>
    <string name="full_name">Full name</string>
    <string name="password">Password</string>
    <string name="please_enter_password">Please enter your password</string>
    <string name="share">Share</string>
    <string name="new_post">New Post</string>
    <string name="discover_people">Discover People</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="enter_a_caption_here">Enter a caption here…</string>
    <string name="follow">Follow</string>
    <string name="e_mail">E-mail</string>
    <string name="next">Next</string>
    <string name="enter_full_name_and_password">Enter full name and password</string>
    <string name="register">Register</string>
    <string name="you_should_enter_your_password">You should enter your password.</string>
    <string name="please_enter_your_name">Please enter your Name</string>
    <string name="please_enter_your_username">Please enter your Username</string>
    <string name="please_enter_your_email">Please enter your E-mail</string>
    <string name="whitespace">&#160;</string>
    <string name="username_is_clicked">Username is clicked</string>
    <string name="please_enter_email_and_password">Please enter e-mail and password</string>
    <string name="this_email_is_already_exists">This email already exists</string>
    <string name="please_enter_full_name_and_password">Please enter full name and password</string>
    <string name="post_added">Post added</string>
    <string name="camera_not_found">Camera not found</string>
    <string name="enter_email_and_password">Please enter your email and password</string>
    <string name="comments">Comments</string>
    <string name="post">Post</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="reply">Reply</string>
    <string name="notifications">Notifications</string>
    <string name="placeholder_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="liked_your_post">Liked your post</string>
    <string name="started_following_you">Started following you.</string>
    <string name="commented">Commented: %s</string>
    <string name="search">Search</string>
    <string name="finishing_up">Finishing up…</string>
    <string name="share_on_whatsapp">Share on WhatsApp</string>
    <string name="copy_link">Copy link</string>
    <string name="archive">Archive</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="turn_off_commenting">Turn Off Commenting</string>
    <string name="report">Report…</string>
    <string name="turn_off_post_notifications">Turn Off Post Notifications</string>
    <string name="share_link">Share Link…</string>
    <string name="unfollow">Unfollow</string>
    <string name="mute">Mute</string>
    <string-array name="genders_array">
        <item>Not Specified</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <plurals name="likes_count">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>
</resources>
