<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <TextView
            android:id="@+id/register_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_full_name_and_password"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/register_name_input"
            style="@style/big_input"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_label"
            android:hint="@string/full_name"/>

    <EditText
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/register_password_input"
            style="@style/big_input"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/register_name_input"
            android:hint="@string/password_login"/>

    <Button
            android:id="@+id/register_btn"
            style="@style/big_btn"
            android:text="@string/register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_password_input"/>
</android.support.constraint.ConstraintLayout>