<?xml version="1.0" encoding="utf-8"?>
<com.example.renai.instagram.views.KeyboardAwareScrollView
        android:id="@+id/login_scrollView"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            tools:context=".activities.LoginActivity">

        <ImageView
                android:id="@+id/instagram_image"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/instagram"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/instagram_label"/>

        <EditText
                android:id="@+id/email_input"
                style="@style/big_input"
                app:layout_constraintTop_toBottomOf="@id/instagram_image"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:inputType="textEmailAddress"
                android:hint="@string/email_login"/>

        <EditText
                android:id="@+id/password_input"
                style="@style/big_input"
                app:layout_constraintTop_toBottomOf="@id/email_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:inputType="textPassword"
                android:hint="@string/password_login"/>

        <Button
                android:id="@+id/login_btn"
                style="@style/blue_btn"
                app:layout_constraintTop_toBottomOf="@id/password_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/log_in"/>

        <TextView
                android:id="@+id/create_account_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_height"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/create_account"
                android:gravity="center"
                android:background="@drawable/top_border_grey"/>
    </android.support.constraint.ConstraintLayout>
</com.example.renai.instagram.views.KeyboardAwareScrollView>
