<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/white"
        >

    <android.support.v7.widget.Toolbar
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/toolbar"
            style="@style/toolbar"
            app:contentInsetStart="0dp"
            >

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

            <ImageView
                    android:id="@+id/back_image"
                    style="@style/icon"
                    android:src="@drawable/ic_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

            <TextView
                    style="@style/toolbar_title"
                    android:text="@string/comments"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/back_image"
                    app:layout_constraintTop_toTopOf="parent"
                    />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/comments_recycler"
            tools:listitem="@layout/comments_item"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/post_comment_layout"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            />

    <LinearLayout
            android:id="@+id/post_comment_layout"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/top_border_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

        <de.hdodenhof.circleimageview.CircleImageView
                style="@style/icon"
                android:padding="6dp"
                android:src="@drawable/person"
                app:civ_border_width="1dp"
                app:civ_border_color="@color/grey"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                />

        <EditText
                android:id="@+id/comment_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="14sp"
                android:hint="@string/add_a_comment"
                android:inputType="text"
                android:background="@android:color/transparent"
                />

        <TextView
                android:id="@+id/post_comment_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/post"
                android:stateListAnimator="@animator/btn_animator"
                android:textColor="@color/blue"
                android:gravity="center_vertical"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>