<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".screens.home.HomeActivity"
        >

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

            <TextView
                    android:id="@+id/username_title_text"
                    style="@style/toolbar_title"
                    tools:text="username.text"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

            <ImageView
                    android:id="@+id/add_friends_image"
                    style="@style/icon"
                    android:src="@drawable/ic_add_friends"
                    app:layout_constraintEnd_toStartOf="@id/settings_image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

            <ImageView
                    android:id="@+id/settings_image"
                    style="@style/icon"
                    android:src="@drawable/ic_more"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

        <android.support.constraint.ConstraintLayout
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    app:civ_border_width="1dp"
                    app:civ_border_color="@color/grey"
                    android:src="@drawable/person"
                    app:layout_constraintHorizontal_weight="2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

            <TextView
                    android:id="@+id/posts_label"
                    android:text="@string/posts"
                    style="@style/profile_text"
                    app:layout_constraintStart_toStartOf="@id/edit_profile_btn"
                    app:layout_constraintEnd_toStartOf="@id/followers_label"
                    app:layout_constraintTop_toBottomOf="@id/posts_count_text"
                    app:layout_constraintBottom_toTopOf="@id/edit_profile_btn"
                    />

            <TextView
                    android:id="@+id/followers_label"
                    android:text="@string/followers"
                    app:layout_constraintStart_toEndOf="@id/posts_label"
                    app:layout_constraintEnd_toStartOf="@id/following_label"
                    app:layout_constraintBaseline_toBaselineOf="@id/posts_label"
                    style="@style/profile_text"
                    />

            <TextView
                    android:id="@+id/following_label"
                    android:text="@string/following"
                    style="@style/profile_text"
                    app:layout_constraintStart_toEndOf="@id/followers_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBaseline_toBaselineOf="@id/posts_label"
                    />

            <TextView
                    android:id="@+id/posts_count_text"
                    tools:text="50"
                    style="@style/profile_text_count"
                    app:layout_constraintStart_toStartOf="@id/posts_label"
                    app:layout_constraintEnd_toEndOf="@id/posts_label"
                    app:layout_constraintTop_toTopOf="@id/profile_picture"
                    />

            <TextView
                    android:id="@+id/followers_count_text"
                    tools:text="100"
                    app:layout_constraintBaseline_toBaselineOf="@id/posts_count_text"
                    app:layout_constraintStart_toStartOf="@id/followers_label"
                    app:layout_constraintEnd_toEndOf="@id/followers_label"
                    style="@style/profile_text_count"
                    />

            <TextView
                    android:id="@+id/following_count_text"
                    tools:text="200"
                    app:layout_constraintStart_toStartOf="@id/following_label"
                    app:layout_constraintEnd_toEndOf="@id/following_label"
                    app:layout_constraintBaseline_toBaselineOf="@id/posts_count_text"
                    style="@style/profile_text_count"
                    />

            <Button
                    android:id="@+id/edit_profile_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minHeight="0dp"
                    android:text="@string/edit_profile_button"
                    android:textAllCaps="false"
                    android:stateListAnimator="@null"
                    android:background="@drawable/selector"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:textSize="14sp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    app:layout_constraintHorizontal_weight="5"
                    app:layout_constraintTop_toBottomOf="@id/posts_label"
                    app:layout_constraintBottom_toBottomOf="@id/profile_picture"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/profile_picture"
                    />

            <TextView
                    android:id="@+id/name_text"
                    tools:text="User's name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/profile_picture"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />

            <TextView
                    android:id="@+id/bio_text"
                    tools:text="Bio text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/name_text"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/black"
                    />

            <TextView
                    android:id="@+id/website_text"
                    tools:text="Website text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/bio_text"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="2dp"
                    android:textColor="#234FA0"
                    />

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/images_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/top_border_grey"
                    app:layout_constraintTop_toBottomOf="@id/website_text"
                    app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view"
                    />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <include layout="@layout/bottom_navigation_view"/>
</android.support.constraint.ConstraintLayout>